install microservices with the top level ledp pom